# opentelemetry-c-wrapper

./: .gitignore  CMakeLists.txt  COPYING  ChangeLog  MEMO  Makefile.am  README  README-configuration  README-naming_convention  README-sharded_map  README.md  TODO  VERSION  configure.ac  opentelemetry-c-wrapper.pc.in  opentelemetry-c-wrapper_dbg.pc.in
cmake/: Config.cmake.in  gen-config.cmake
include/: compiler.h  configuration.h  dbg_malloc.h  debug.h  define.h  exporter.h  include.h  logger.h  meter.h  processor.h  propagation.h  provider.h  resource.h  sampler.h  span.h  static_assert.h  std.h  threads.h  tracer.h  util.h  yaml.h
include/opentelemetry-c-wrapper/: dbg_malloc.h  debug.h  define.h  include.h  logger.h  meter.h  otel_cpp.h.in  propagation.h  span.h  tracer.h  util.h  version.h.in
m4/: am-common.m4  am-enable-threads.m4  am-host.m4  am-misc.m4  am-with-libfyaml.m4  am-with-opentelemetry.m4  am-with-rapidyaml.m4
m4/pkgconfig/: am-with-libfyaml.m4  am-with-opentelemetry.m4
scripts/: bootstrap  build-counter  configure  distclean  log-clean.sh  semconv.h.in  semconv.sh  test-build.sh  test-rebase.sh
snippet/: CMakeLists.txt  main.cpp  main.h  make.sh
src/: Makefile.am  dbg_malloc.cpp  export.map  export_dbg.map  exporter.cpp  logger.cpp  meter.cpp  processor.cpp  provider.cpp  resource.cpp  sampler.cpp  span.cpp  threads.cpp  tracer.cpp  util.cpp  version.cpp  yaml.cpp
test/: Makefile.am  define.h  gdb.sh  include.h  opentelemetry.c  opentelemetry.h  otel-cfg.yml  speed-cfg.yml  speed-show.sh  speed.sh  test-logger.c  test-meter.c  test-multi.c  test-tracer.c  test-util.c  test-util.h  test-yaml.cpp  test.c
test/elastic-apm/: .env  README  docker-compose.yml  es-init.sh  kibana-startup.sh
test/otelcol/: README  config.yaml
